fixed port issue ,nodemon removed added git ignore files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "just an app",
   "start": "nodemon index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "Nidhin  M",
   "license": "ISC",
