--- a/my app/package.json
+++ b/my app/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "date-format": "^4.0.14",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "swagger-ui-express": "^4.6.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
