--- a/02mydocsswagger/package.json
+++ b/02mydocsswagger/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "swagger-ui-express": "^4.6.0",
     "yamljs": "^0.3.0"
   }
