--- a/tshirtstore/package.json
+++ b/tshirtstore/package.json
@@ -4,7 +4,7 @@
   "description": "a backend api for tshirt store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [
     "api",
