--- a/tshirtstore/package.json
+++ b/tshirtstore/package.json
@@ -18,11 +18,11 @@
     "cloudinary": "^1.33.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
-    "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
     "razorpay": "^2.8.4",
     "stripe": "^11.7.0",
