--- a/tshirtstore/package.json
+++ b/tshirtstore/package.json
@@ -23,6 +23,7 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
     "razorpay": "^2.8.4",
     "stripe": "^11.7.0",
