Started with Passwosport.js

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 tshirtstore/node_modules
 tshirtstore/.env
 06expressfileupload/node_modules
+08lcopassport/node_modules
+08lcopassport/.env
+07formidable/node_modules
